(PC-34609)[PRO] fix: Fix flex-wrap above laptop on offer lists filters.

--- a/pro/src/components/FormLayout/FormLayout.module.scss
+++ b/pro/src/components/FormLayout/FormLayout.module.scss
@@ -125,6 +125,10 @@ $info-box-margin-left: rem.torem(24px);
 
 @media (min-width: size.$laptop) {
   .form-layout {
+    &-row.inline-group {
+      flex-wrap: unset;
+    }
+
     &-row-info-info {
       width: $info-box-width;
       position: absolute;
